--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "trustbuddy-frontend",
+  "homepage": "https://enamulbokshi.github.io/trustbuddy-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
+
   },
   "dependencies": {
     "framer-motion": "^11.12.0",
+    "gh-pages": "^6.2.0",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
