--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trustbuddy-frontend",
-  "homepage": "https://enamulbokshi.github.io/trustbuddy-frontend",
+  "homepage": "https://enamulbokshi.github.io/trustbuddy-frontend/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
