--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist r https://enamulbokshi.github.io/trustbuddy-frontend/"
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^11.12.0",
@@ -20,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
