--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-router": "^7.0.1",
     "react-toastify": "^10.0.6",
+    "swiper": "^11.1.15",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
